ghost-site/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myopenshiftblog
    app.kubernetes.io/component: myopenshiftblog
    app.kubernetes.io/instance: myopenshiftblog
    app.kubernetes.io/name: myopenshiftblog
    app.kubernetes.io/part-of: myopenshiftblog
    app.openshift.io/runtime-namespace: myopenshiftblog
  name: myopenshiftblog
  namespace: myopenshiftblog
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: myopenshiftblog
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: myopenshiftblog
        deploymentconfig: myopenshiftblog
    spec:
      containers:
      - env:
        - name: url
          value: https://myopenshiftblog.com
        image: ghost@sha256:b76e17a04c89d501f391c9f9b83ec645ed9b0423ddf0a9999085f16d88ffc8cd
        imagePullPolicy: Always
        name: drivetester
        ports:
        - containerPort: 2368
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: myopenshiftblog
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: myopenshiftblog
        persistentVolumeClaim:
          claimName: myopenshiftblog
