ghost-site/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: myopenshiftblog
    app.kubernetes.io/component: myopenshiftblog
    app.kubernetes.io/instance: myopenshiftblog
    app.kubernetes.io/name: myopenshiftblog
    app.kubernetes.io/part-of: myopenshiftblog
    app.openshift.io/runtime-version: latest
  name: myopenshiftblog
  namespace: myopenshiftblog
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 2368-tcp
    port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    app: drivetester
    deploymentconfig: myopenshiftblog
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
