ghost-site/03-mydatasciencebook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mydatasciencebook
    app.kubernetes.io/component: mydatasciencebook
    app.kubernetes.io/instance: mydatasciencebook
    app.kubernetes.io/name: mydatasciencebook
    app.kubernetes.io/part-of: mydatasciencebook
    app.openshift.io/runtime-version: latest
  name: mydatasciencebook
  namespace: mydatasciencebook
spec:
  host: mydatasciencebook.com
  port:
    targetPort: 2368-tcp
  to:
    kind: Service
    name: mydatasciencebook
    weight: 100
  wildcardPolicy: None
