ghost-site/04-www-drivetester-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: drivetester
    app.kubernetes.io/component: drivetester
    app.kubernetes.io/instance: drivetester
    app.kubernetes.io/name: drivetester
    app.kubernetes.io/part-of: drivetester
    app.openshift.io/runtime-version: latest
  name: www-drivetester
  namespace: drivetester
spec:
  host: www.drivetester.us
  port:
    targetPort: 2368-tcp
  to:
    kind: Service
    name: drivetester
    weight: 100
  wildcardPolicy: None
