ghost-site/04-www-myopenshiftblog-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: myopenshiftblog
    app.kubernetes.io/component: myopenshiftblog
    app.kubernetes.io/instance: myopenshiftblog
    app.kubernetes.io/name: myopenshiftblog
    app.kubernetes.io/part-of: myopenshiftblog
    app.openshift.io/runtime-version: latest
  name: www-myopenshiftblog
  namespace: myopenshiftblog
spec:
  host: www.myopenshiftblog.com
  port:
    targetPort: 2368-tcp
  to:
    kind: Service
    name: myopenshiftblog
    weight: 100
  wildcardPolicy: None
